# confluent-kafka-avro-pipeline

./: .env.example  .gitignore  README.md  confluent_avro_data_consumer.py  confluent_avro_data_consumer_2.py  confluent_avro_data_producer.py  pyproject.toml  requirements.txt
src/retail_kafka_pipeline/: __init__.py  config.py  consumer_app.py  producer_app.py  records.py
tests/: test_records.py
