[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "retail-kafka-avro-pipeline"
version = "1.0.0"
description = "Production-style Confluent Kafka + Avro data pipeline in Python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "confluent-kafka[schema-registry]>=2.4.0",
  "python-dotenv>=1.0.1",
  "certifi>=2024.0.0",
  "httpx>=0.28.0",
  "authlib>=1.3.0",
  "fastavro>=1.9.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[project.scripts]
retail-producer = "retail_kafka_pipeline.producer_app:main"
retail-consumer = "retail_kafka_pipeline.consumer_app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
